--- a/hello-compose/docker-compose.yml
+++ b/hello-compose/docker-compose.yml
@@ -11,9 +11,11 @@ services:
       - php
 
   php:
-    image: php:7.0-fpm
+    build: ./php
     expose:
       - 9000
+    links:
+      - mysql
     volumes_from:
       - app
 
@@ -23,3 +25,25 @@ services:
       - ./www/html:/var/www/html
     command: "true"
 
+
+  mysql:
+    image: mysql:latest
+    volumes:
+      - data:/var/lib/mysql
+    # environment:
+    #   MYSQL_DATABASE: project
+    #   MYSQL_PASSWORD: project
+    #   MYSQL_ROOT_PASSWORD: secret
+    #   MYSQL_USER: project
+
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   ports:
+  #     - 8080:80
+  #   depends_on:
+  #     - mysql
+  #   environment:
+  #     PMA_HOST: mysql
+
+volumes:
+  data:
