--- a/hello-compose/docker-compose.yml
+++ b/hello-compose/docker-compose.yml
@@ -30,11 +30,11 @@ services:
     image: mysql:latest
     volumes:
       - data:/var/lib/mysql
-    # environment:
-    #   MYSQL_DATABASE: project
-    #   MYSQL_PASSWORD: project
-    #   MYSQL_ROOT_PASSWORD: secret
-    #   MYSQL_USER: project
+    environment:
+      MYSQL_DATABASE: "${MYSQL_DATABASE}"
+      MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      MYSQL_USER: "${MYSQL_USER}"
 
   # phpmyadmin:
   #   image: phpmyadmin/phpmyadmin
