--- a/node-project/package.json
+++ b/node-project/package.json
@@ -3,8 +3,6 @@
   "scripts": {
     "start": "echo Hello world!"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-	}
+  "dependencies": {},
+  "devDependencies": {}
 }
