--- a/node-project/package.json
+++ b/node-project/package.json
@@ -1,8 +1,11 @@
 {
   "private": "true",
   "scripts": {
-    "start": "echo Hello world!"
+    "test": "mocha"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
