prepare wp-config automatically
Is it a good way? Doesn't it include secrets like AUTH_KEY?

--- a/composer-wp-project/docker-compose.yml
+++ b/composer-wp-project/docker-compose.yml
@@ -37,7 +37,7 @@ services:
 
   composer:
     build: ./composer
-    command: composer install
+    command: bash -c "composer install && cp ./wp-config.php wp/"
     volumes:
       - .:/app
 
