make sure use existing image

--- a/composer-wp-project/docker-compose.yml
+++ b/composer-wp-project/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       MYSQL_USER: "${MYSQL_USER}"
 
   wp:
-    image: nginx:latest
+    build: ./nginx
     volumes:
       - ./wp:/var/www/html
     command: "true"
